[project]
name = "aoc2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "line-profiler>=4.2.0",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
ignore = ["E741", "E731"]

[tool.pyright]
# see https://github.com/microsoft/pyright/blob/main/docs/configuration.md#sample-pyprojecttoml-file
venvPath = "."
venv = ".venv"

